2003-10-22  Ettore Perazzoli  <ettore@ximian.com>

	* e-shell-window.c (struct _ComponentView): New member button_id.
	(struct _EShellWindowPrivate): New member sidebar.
	(component_new_new): Get a button_id arg.
	(component_button_clicked_callback): Removed.
	(sidebar_button_selected_callback): New.
	(create_component_button): Removed.
	(setup_widget): Set up the sidebar using ESidebar and hook up its
	"button_selected" signal.  Also get the component name from a
	property on the server info.
	(e_shell_window_new): Use BASE_VERSION for the version in the app
	name instead of hardcoding "1.5".

	* e-sidebar.c: New.
	* e-sidebar.h: New.

2003-10-22  Ettore Perazzoli  <ettore@ximian.com>

	* GNOME_Evolution_Shell.server.in.in: Append a _2 to all the IIDs.

	* e-shell.h (E_SHELL_OAFIID): Change to "GNOME_Evolution_Shell_2"
	so it does not conflict with the old IID.

2003-10-22  Jeffrey Stedfast  <fejj@ximian.com>

	* e-shell-window.c (e_shell_window_new): Change to "evolution-1.5"
	- although, ideally, this should be a config.h macro or something.

2003-10-22  Dan Winship  <danw@ximian.com>

	* main.c: Remove e_proxy_init call. (e-proxy is gone now)

2003-10-17  Jeffrey Stedfast  <fejj@ximian.com>

	* e-storage-set-view.c: Rewrote the drag & drop code.

2003-10-21  Not Zed  <NotZed@Ximian.com>

	* e-storage-browser.c (e_storage_browser_show_path): ref the view
	since removing it from the hashtable will unref it.

2003-10-09  Jeffrey Stedfast  <fejj@ximian.com>

	* Makefile.am: INCLUDE path fixes for changes made to libical
	build.

2003-09-30  Ismael Olea <ismael@olea.org>

	* e-shell-about-box.c: fixed encoding for Spanish translators.

2003-09-29  Ettore Perazzoli  <ettore@ximian.com>

	* e-folder-selection-dialog.c, e-folder-selection-dialog.h: New
	files, based on e-shell-folder-selection-dialog.[ch].  These don't
	require the shell, they just need an EStorageSet to work.

2003-09-23  Charles Zhang  <charles.zhang@sun.com>
